@@ -1,5 +1,5 @@
-This is Python version 3.4.0 release candidate 1
-================================================
+This is Python version 3.5.0 alpha 1
+====================================
 
 Copyright (c) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011,
 2012, 2013, 2014 Python Software Foundation.  All rights reserved.
@@ -52,9 +52,9 @@ What's New
 ----------
 
 We try to have a comprehensive overview of the changes in the "What's New in
-Python 3.4" document, found at
+Python 3.5" document, found at
 
-    http://docs.python.org/3.4/whatsnew/3.4.html
+    http://docs.python.org/3.5/whatsnew/3.5.html
 
 For a more detailed change log, read Misc/NEWS (though this file, too, is
 incomplete, and also doesn't list anything merged in from the 2.7 release under
@@ -67,9 +67,9 @@ entitled "Installing multiple versions".
 Documentation
 -------------
 
-Documentation for Python 3.4 is online, updated daily:
+Documentation for Python 3.5 is online, updated daily:
 
-    http://docs.python.org/3.4/
+    http://docs.python.org/3.5/
 
 It can also be downloaded in many formats for faster access.  The documentation
 is downloadable in HTML, PDF, and reStructuredText formats; the latter version
@@ -94,7 +94,7 @@ backported versions of certain key Python 3.x features.
 A source-to-source translation tool, "2to3", can take care of the mundane task
 of converting large amounts of source code.  It is not a complete solution but
 is complemented by the deprecation warnings in 2.6.  See
-http://docs.python.org/3.4/library/2to3.html for more information.
+http://docs.python.org/3.5/library/2to3.html for more information.
 
 
 Testing
@@ -132,7 +132,7 @@ same prefix you must decide which version (if any) is your "primary" version.
 Install that version using "make install".  Install all other versions using
 "make altinstall".
 
-For example, if you want to install Python 2.6, 2.7 and 3.4 with 2.7 being the
+For example, if you want to install Python 2.6, 2.7 and 3.5 with 2.7 being the
 primary version, you would execute "make install" in your 2.7 build directory
 and "make altinstall" in the others.
 
